Fix style spacing

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -2017,9 +2017,9 @@
 						icon: (
 							align-self: center,
 							grid-area: icon,
-							height: var(--global-font-size-9),
+							height: var(--global-spacing-5),
 							justify-self: center,
-							width: var(--global-font-size-9),
+							width: var(--global-spacing-5),
 							z-index: 1,
 						),
 						input: (
